# page-loader

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
page_loader/: __init__.py  args_parser.py  args_parsing.py  dom_tree.py  download.py  downloader.py  downloading.py  exceptions.py  logging.py  page.py  recourse.py  resource.py  resources.py  storage.py  urls.py  utils.py
page_loader/scripts/: page_loader.py
tests/: test_download.py  test_downloader.py  test_downloading.py  test_resource.py  test_resources.py  test_storage.py  test_urls.py  test_utils.py  utils.py
tests/fixtures/: hexlet_courses.html  hexlet_courses_after_download.html  page.html  page_after_download.html  test_page.html  test_page_after_download.html
tests/fixtures/page_resources/: application.js  runtime.js
