[tool.poetry]
name = "vetalpaprotsky_page_loader"
version = "0.6.6"
description = "Download web pages with all resources."
license = "MIT"
readme = "README.md"
authors = ["Vitalii Paprotskyi <vetalpaprotsky@gmail.com>"]
repository = "https://github.com/vetalpaprotsky/page-loader"
packages = [
  { include = "page_loader" },
]
classifiers = [
  "Environment :: Console"
  "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
beautifulsoup4 = "^4.9.3"
progress = "^1.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pep8-naming = "^0.11.1"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
requests-mock = "^1.8.0"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
